# sre-ascent

./: .env.example  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: build.yml
app/: config.py  graph.py  search_engine.py  server.py  slack_socket_mode.py
app/agents/: random_number.py  search_agent.py  slack_searcher.py  thread_summary.py  util.py  webrca_create.py
app/chains/: extraction.py  supervisor.py
app/dependencies/: ollama_chat_model.py  ollama_functions_model.py  openai_chat_model.py  slack.py  slack_client.py  slack_handler.py
app/routers/: slack.py
app/tools/: datetime_provider.py  duckduckgo_search.py  get_thread_msg.py  random_number.py  random_select.py  slack_searcher.py  slack_toolkit.py  webrca_create.py
app/tools/slack_bolt_env/: requirements.txt  setup.sh  sre-ascent-dev.py
