[tool.poetry]
name = "sre-ascent"
version = "0.1.0"
description = ""
authors = [
    "Di Wang <dwan@redhat.com>",
    "Anshul Verma <ansverma@redhat.com>",
    "Jeff Yuan <jeyuan@redhat.com>",
    "Samantha Jayasinghe <sjayasin@redhat.com>",
    "Shawn Bai <sbai@redhat.com>",
    "Tony Kong <tkong@redhat.com>",
]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
duckduckgo-search = "^4.4.3"
langchain-community = "^0.0.20"
langchain-experimental = "^0.0.51"
langchain-openai = "^0.0.6"
langgraph = "^0.0.24"
langserve = {extras = ["server"], version = ">=0.0.41"}
pydantic = "<2"
python = "^3.11"
python-dotenv = "^1.0.1"
slack-bolt = "^1.18.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ruff = "^0.2.1"

[tool.poetry.scripts]
slack_socket_mode = "app.slack_socket_mode:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
